--- a/frontend/styles/background.css
+++ b/frontend/styles/background.css
@@ -1,12 +1,12 @@
 .bg-top {
     width: 100%;
-    height: calc(50vh + 30vw) ;
-    background: url("../images/back-1.png") center no-repeat;
+    height: calc(25vh + 50vw);
+    background: url("../images/back-1.png") -10px -10px no-repeat;
+    background-size: cover;
 }
 
-.bg-medium {
-    width: 100%;
-    height: calc(50vh + 30vw) ;
-    background: url("../images/back-2.png") center no-repeat;
-    background-position: 50% 100%;
+@media (min-width: 768px) {
+    .bg-top {
+        background-size: contain;
+    }
 }
