--- a/frontend/styles/body.css
+++ b/frontend/styles/body.css
@@ -1,6 +1,6 @@
-/* body {
-    background: url("../images/back.png") top no-repeat;
-} */
+body {
+    overflow-x: hidden;
+}
 
 .menu {
     background: url("../images/menu.png") center no-repeat;
@@ -19,10 +19,9 @@
 }
 
 .intro-1 {
-    margin-top: 100px;
     background: linear-gradient(228deg, #5700E5 26.5%, #EE6767 99.48%);
     background-clip: text;
-    font-size: calc(5vw + 3vh);
+    font-size: calc(3vw + 4vh);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -36,4 +35,36 @@
     background: url("../images/computer.png");
     background-size: cover;
     background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+.prototype {
+    width: 100%;
+}
+
+.fun_about {
+    margin-top: 20px;
+    row-gap: 50px;
+}
+
+.fun_about div {
+    width: 395px;
+    border-radius: 13px;
+    background: #F5F5F5;
+    box-shadow: 0px 11px 24px 0px rgba(0, 0, 0, 0.10), 0px 44px 44px 0px rgba(0, 0, 0, 0.09), 0px 99px 59px 0px rgba(0, 0, 0, 0.05), 0px 176px 70px 0px rgba(0, 0, 0, 0.01), 0px 274px 77px 0px rgba(0, 0, 0, 0.00);
+    padding: 5px;
+}
+
+.fun_about .side img {
+    border-radius: 13px;
+}
+
+@media (min-width: 768px) {
+    .discover {
+        background-size: contain;
+    }
+
+    .prototype {
+        width: 90%;
+    }
 }
