--- a/frontend/styles/body.css
+++ b/frontend/styles/body.css
@@ -53,10 +53,15 @@ body {
     background: #F5F5F5;
     box-shadow: 0px 11px 24px 0px rgba(0, 0, 0, 0.10), 0px 44px 44px 0px rgba(0, 0, 0, 0.09), 0px 99px 59px 0px rgba(0, 0, 0, 0.05), 0px 176px 70px 0px rgba(0, 0, 0, 0.01), 0px 274px 77px 0px rgba(0, 0, 0, 0.00);
     padding: 5px;
+    transition: all 0.5s ease-in-out;
 }
 
-.fun_about .side img {
+.fun_about img {
     border-radius: 13px;
+}
+
+.fun_about div:hover {
+    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.201);
 }
 
 @media (min-width: 768px) {
