--- a/backend/home/static/home/styles/background.css
+++ b/backend/home/static/home/styles/background.css
@@ -4,6 +4,12 @@
     background: url("../images/back-1.png") -10px -10px no-repeat;
     background-size: cover;
 }
+.bg-top-2 {
+    width: 100%;
+    height: 75px;
+    background:linear-gradient(340deg, #5B0E4F 10.3%, #0A2540 73.98%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+}
 
 .bg-bottom {
     width: 100%;
