update meta data

--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% block content %}
 <main class="container-fluid px-5">
-    
+
 </main>
-{% endblock content %}home/
+{% endblock content %}
