--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -1,35 +1,73 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{% static 'users/images/logo.svg' %}" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'users/main.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="{% static 'home/images/virtual bank logo.svg' %}" type="image/x-icon" />
 
-    <!-- load font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="content-language" content="en-US" />
+    <meta name="author" content="Adeniji Olajide" />
+    <meta name="publisher" content="Adeniji Olajide" />
+    <meta name="copyright" content="Adeniji Olajide" />
+    <meta name="keywords" content="transaction, banking simulation, financial transaction, developer test, test developers, virtual transaction, bank simulator online, simulator bank, planning and presentation, planning development, planning in presentation skills, planning presentation skills, web development bootcamp,
+        computer programming,
+        programmer, plan your presentation" />
+    <meta name="description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
+    <meta name="page-type" content="banking simulation," />
+    <meta name="audience" content="Everyone" />
+    <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+    <meta property="og:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
 
-    <!-- load bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta property="og:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta property="og:type" content="E-learning" />
+    <meta property="og:site_name" content="LoopSync" />
+    <meta property="og:locale" content="en-US" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta name="twitter:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
+    <meta itemprop="description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
+    <meta name="twitter:site" content="@Goldenthrust3" />
+
+    <meta property="og:url" content="{{ request.resolver_match.url_name }}" />
+    <meta itemprop="url" content="{{ request.resolver_match.url_name }}" />
+    <meta name="twitter:domain" content="https://virtualbank.tech" />
+    <meta name="twitter:url" content="{{ request.resolver_match.url_name }}" />
 
     {% if title %}
-        <title>Virtual Bank - {{ title }}</title>
+      <meta name="twitter:title" content="Virtual Bank - {{ title }}" />
+      <meta itemprop="title" content="Virtual Bank - {{ title }}" />
+      <meta property="og:title" content="Virtual Bank - {{ title }}" />
+      <title>Virtual Bank - {{ title }}</title>
     {% else %}
-        <title>Virtual Bank</title>
+      <title>Virtual Bank</title>
     {% endif %}
-</head>
-<body>
+
+    <!-- load font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&display=swap" rel="stylesheet" />
+
+    <!-- load bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+    <!-- load css -->
+    <link rel="stylesheet" href="{% static 'home/styles/headers.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/styles/background.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/styles/body.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/styles/footer.css' %}" />
+  </head>
+  <body>
     <header class="site-header">
+      <div></div>
+      <div></div>
+      <div></div>
     </header>
     <main role="main" class="container">
-        {% block content %}{% endblock %}
+      {% block content %}
+      {% endblock %}
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
-        defer></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
+  </body>
 </html>
