No Commit Message

--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -20,20 +20,20 @@
     <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
     <meta property="og:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
 
-    <meta property="og:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta property="og:image" content="{% static 'home/images/banner.jpg' %}" />
     <meta property="og:type" content="E-learning" />
     <meta property="og:site_name" content="LoopSync" />
     <meta property="og:locale" content="en-US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta name="twitter:image" content="{% static 'home/images/banner.jpg' %}" />
     <meta name="twitter:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta itemprop="description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta name="twitter:site" content="@Goldenthrust3" />
-
-    <meta property="og:url" content="{{ request.resolver_match.url_name }}" />
-    <meta itemprop="url" content="{{ request.resolver_match.url_name }}" />
-    <meta name="twitter:domain" content="https://virtualbank.tech" />
-    <meta name="twitter:url" content="{{ request.resolver_match.url_name }}" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="https://virtualbank.tech/{{ request.resolver_match.route }}" />
+    <meta itemprop="url" content="https://virtualbank.tech/{{ request.resolver_match.route }}" />
+    <meta name="twitter:domain" content="virtualbank.tech" />
+    <meta name="twitter:url" content="https://virtualbank.tech/{{ request.resolver_match.route }}" />
 
     {% if title %}
       <meta name="twitter:title" content="Virtual Bank - {{ title }}" />
@@ -53,14 +53,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
     <!-- load css -->
-    <link rel="stylesheet" href="{% static 'home/styles/headers.css' %}" />
-    <link rel="stylesheet" href="{% static 'home/styles/background.css' %}" />
-    <link rel="stylesheet" href="{% static 'home/styles/body.css' %}" />
-    <link rel="stylesheet" href="{% static 'home/styles/footer.css' %}" />
+    <link rel="stylesheet" href="{% static 'users/styles/headers.css' %}" />
+    <link rel="stylesheet" href="{% static 'users/styles/background.css' %}" />
+    <link rel="stylesheet" href="{% static 'users/styles/body.css' %}" />
+    <link rel="stylesheet" href="{% static 'users/styles/footer.css' %}" />
   </head>
   <body>
     <header class="site-header">
-      <div></div>
+      <div>
+        <span class="icon"><img src="{% static 'users/styles/accounts.png' %}" alt=""></span>
+        <span class="icon"><img src="{% static 'users/styles/add.png' %}" alt=""></span>
+      </div>
       <div></div>
       <div></div>
     </header>
