--- a/clients/home/templates/home/base.html
+++ b/clients/home/templates/home/base.html
@@ -20,19 +20,19 @@
     <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
     <meta property="og:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
 
-    <meta property="og:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta property="og:image" content="{% static 'home/images/banner.jpg' %}" />
     <meta property="og:type" content="E-learning" />
     <meta property="og:site_name" content="LoopSync" />
     <meta property="og:locale" content="en-US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="{% static 'home/images/transaction.png' %}" />
+    <meta name="twitter:image" content="{% static 'home/images/banner.jpg' %}" />
     <meta name="twitter:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta itemprop="description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta name="twitter:site" content="@Goldenthrust3" />
-
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="og:url" content="{{ request.resolver_match.url_name }}" />
     <meta itemprop="url" content="{{ request.resolver_match.url_name }}" />
-    <meta name="twitter:domain" content="https://virtualbank.tech" />
+    <meta name="twitter:domain" content="virtualbank.tech" />
     <meta name="twitter:url" content="{{ request.resolver_match.url_name }}" />
     
     {% if title %}
