--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -29,7 +29,7 @@
     <meta name="twitter:description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta itemprop="description" content="Welcome to the Virtual Bank project! This innovative web application and API were meticulously crafted to serve as a versatile platform for developers seeking to simulate banking transactions. Whether you’re testing e-commerce websites, exploring payment integrations, or developing financial applications, Virtual Bank offers a robust environment for experimentation without the need for real bank APIs." />
     <meta name="twitter:site" content="@Goldenthrust3" />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="https://virtualbank.tech/{{ request.resolver_match.route }}" />
     <meta itemprop="url" content="https://virtualbank.tech/{{ request.resolver_match.route }}" />
     <meta name="twitter:domain" content="virtualbank.tech" />
@@ -53,24 +53,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
     <!-- load css -->
+    <link rel="stylesheet" href="{% static 'users/styles/main.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/headers.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/background.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/body.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/footer.css' %}" />
   </head>
   <body>
-    <header class="site-header">
-      <div>
-        <span class="icon"><img src="{% static 'users/styles/accounts.png' %}" alt=""></span>
-        <span class="icon"><img src="{% static 'users/styles/add.png' %}" alt=""></span>
-      </div>
-      <div></div>
-      <div></div>
-    </header>
-    <main role="main" class="container">
+    {% if request.resolver_match.url_name != 'register' and request.resolver_match.url_name != 'login' %}
+      <header class="site-header px-3 d-flex flex-row justify-content-between align-items-center">
+        <div>
+          <span><img src="{% static 'users/images/accounts.png' %}" alt="accounts" class="accounts" /></span>
+          <span><img src="{% static 'users/images/add.png' %}" alt="add account" class="add" /></span>
+        </div>
+        <div class="searchbar border border-success rounded-pill p-2 h-75 w-50 d-flex align-items-center">
+          <img src="{% static 'users/images/searchicon.png' %}" alt="search icon" class="search" />
+          <input type="text" class="rounded-end-pill w-100" />
+        </div>
+        <div class="w-15 d-flex justify-content-between align-items-center">
+            <a href="#"><img src="{% static 'users/images/developer.png' %}" alt="developer" class="icon" /></a>
+            <a href="#"><img src="{% static 'users/images/help.png' %}" alt="help" class="icon" /></a>
+            <a href="#"><img src="{% static 'users/images/notification.png' %}" alt="notification" class="icon" /></a>
+            <a href="#"><img src="{{ request.user.profile_picture.url }}" alt="profile" class="profile border border-success rounded-pill" /></a>
+        </div>
+      </header>
+    {% endif %}
+    <main role="main" class="container-fluid">
       {% block content %}
+
       {% endblock %}
     </main>
+    {% if request.resolver_match.url_name != 'register' and request.resolver_match.url_name != 'login' %}
+      <footer></footer>
+    {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
   </body>
 </html>
