--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -1,7 +1,5 @@
 {% extends "users/base.html" %}
 {% load static %}
 {% block content %}
-<main class="container-fluid px-5">
-
-</main>
+    Welcome! Now that you're part of our community, let's ensure you have a smooth experience while testing transactions and exploring our features.
 {% endblock content %}
