No Commit Message

--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "users/base.html" %}
 {% load static %}
 {% block content %}
-    Welcome! Now that you're part of our community, let's ensure you have a smooth experience while testing transactions and exploring our features.
+   <p class="fs-5 fw-semibold w-50 m">Welcome! Now that you're part of our community, let's ensure you have a smooth experience while testing transactions and exploring our features.</p>
 {% endblock content %}
