--- a/clients/users/templates/users/register.html
+++ b/clients/users/templates/users/register.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="content-section my-2">
         <div class="my-3">
-            <img src="{% static 'users/images/logo.svg' %}" alt="" srcset="" class="logo">
+            <img src="{% static 'home/images/logo.svg' %}" alt="" srcset="" class="logo">
             <span class="h3">Virtual Bank</span>
         </div>
         <form method="POST" class="border border-primary px-5 py-2 shadow p-3 mb-5 bg-body-tertiary rounded">
