--- a/clients/users/templates/users/login.html
+++ b/clients/users/templates/users/login.html
@@ -7,7 +7,7 @@
             <img src="{% static 'home/images/logo.svg' %}" alt="" srcset="" class="logo">
             <span class="h3">Virtual Bank</span>
         </div>
-        <form method="POST" class="border border-primary px-5 py-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+        <form method="POST" class="border border-primary px-5 py-2 shadow p-3 mb-5 bg-body-tertiary rounded m-auto" style="width: 90%;">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Sign In</legend>
