--- a/clients/users/static/users/styles/headers.css
+++ b/clients/users/static/users/styles/headers.css
@@ -54,6 +54,14 @@ aside.main-nav .icon {
 
 aside.account-form {
     position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 1;
+}
+
+aside.account-form form {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
