--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -6,22 +6,24 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Create Account</legend>
-      <div id="div_id_account_type" class="mb-3">
-        <label for="id_account_type" class="form-label requiredField">Account type<span class="asteriskField">*</span></label> <select name="account_type" class="select form-select" id="id_account_type">
+      <div id="div_account_type" class="mb-3">
+        <label for="account_type" class="form-label">Account type</label> <select name="account_type" class="select form-select" id="account_type">
           <option value="SAVINGS" selected>Savings</option> <option value="CURRENT">Current</option>
         </select>
-      </div> <div id="div_id_currency" class="mb-3">
-        <label for="id_currency" class="form-label requiredField">Currency<span class="asteriskField">*</span></label> <select name="currency" class="select form-select" id="id_currency">
+      </div>
+      <div id="div_currency" class="mb-3">
+        <label for="currency" class="form-label">Currency</label> <select name="currency" class="select form-select" id="currency">
           <option value="USD">USD</option> <option value="EUR">EUR</option> <option value="GBP">GBP</option> <option value="NGN" selected>NGN</option>
         </select>
       </div>
 
       <div class="form-group mb-3">
-        <button class="btn btn-outline-info w-100" type="submit">Create</button>
+        <button class="btn btn-outline-info w-100" id='create-account-btn' type="button">Create</button>
       </div>
     </fieldset>
   </form>
 </aside>
+
 <aside class="main-nav border-end d-flex flex-column align-items-center justify-content-between py-4 border-success position-fixed">
   <a href="#"><img src="{% static 'users/images/home.png' %}" alt="home" class="icon" /></a>
   <a href="#"><img src="{% static 'users/images/deposits.png' %}" alt="deposits" class="icon" /></a>
@@ -46,7 +48,7 @@
             {% endif %}
           {% endfor %}
           <div class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
-            <span><input type="text" class="bg-transparent border-none account_name fw-lighter rename-account" placeholder="+" /></span>
+            <span><input type="text" class="bg-transparent border-none account_name fw-lighter add-account" placeholder="+" /></span> <!--add account number-->
           </div>
         </div>
       </div>
