--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
 
     <meta property="og:image" content="{% static 'home/images/banner.jpg' %}" />
     <meta property="og:type" content="E-learning" />
-    <meta property="og:site_name" content="LoopSync" />
+    <meta property="og:site_name" content="Virtual Bank" />
     <meta property="og:locale" content="en-US" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="{% static 'home/images/banner.jpg' %}" />
