--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -42,7 +42,7 @@
           {% for account in request.user.account_set.all %}
             {% if account.name != request.session.account.name %}
               <div class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
-                <a href="{% url 'accounts:switch_account' account.pk %}" class="account-name fw-semibold text-decoration-none text-black">{{ account.name }}</a> - <span class="account-balance">{{ account.currency|currency_to_unicode|safe }}{{ account.balance }}</span>
+                <a href="{% url 'accounts:switch_account' account.pk %}" class="account-name fw-semibold text-decoration-none text-black">{{ account.name }}</a> - <span class="account-balance">{{ account.currency|currency_to_unicode|safe }}{{ account.balance }}</span> <!-- account lists -->
               </div>
               <hr class="mx-0 my-0" />
             {% endif %}
@@ -53,7 +53,10 @@
         </div>
       </div>
     </span>
-    <span><input type="text" class="bg-transparent border-none account_name fw-lighter {% if request.session.account.name %} rename-account {% else %} add-account {% endif %}" value="{{ request.session.account.name }}" placeholder="+" /></span>
+    <span>
+      <div id="account-id" class="d-none">{{ request.session.account.pk }}</div> <!-- account id -->
+      <input type="text" class="bg-transparent border-none account_name fw-lighter {% if request.session.account.name %} rename-account {% else %} add-account {% endif %}" value="{{ request.session.account.name }}" placeholder="+" />
+    </span>
 
   </div>
   <div class="searchbar border border-success rounded-pill p-2 h-75 w-50 d-flex align-items-center">
