--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -25,13 +25,13 @@
 </aside>
 
 <aside class="main-nav border-end d-flex flex-column align-items-center justify-content-between py-4 border-success position-fixed">
-  <a href="#"><img src="{% static 'users/images/home.png' %}" alt="home" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/deposits.png' %}" alt="deposits" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/transfers.png' %}" alt="transfer" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/debit_card.png' %}" alt="debit card" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/transactions.png' %}" alt="transaction" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/history.png' %}" alt="history" class="icon" /></a>
-  <a href="#"><img src="{% static 'users/images/notifications.png' %}" alt="notification" class="icon" /></a>
+  <a href="#"><img src="{% static 'users/images/home.png' %}" alt="home" class="icon" title="home" /></a>
+  <a href="#"><img src="{% static 'users/images/deposits.png' %}" alt="deposits" class="icon" title="deposits" /></a>
+  <a href="#"><img src="{% static 'users/images/transfers.png' %}" alt="transfers" class="icon" title="transfers" /></a>
+  <a href="#"><img src="{% static 'users/images/debit_card.png' %}" alt="debit card" class="icon" title="debit_card" /></a>
+  <a href="#"><img src="{% static 'users/images/transactions.png' %}" alt="transactions" class="icon" title="transactions" /></a>
+  <a href="#"><img src="{% static 'users/images/history.png' %}" alt="history" class="icon" title="history" /></a>
+  <a href="#"><img src="{% static 'users/images/notifications.png' %}" alt="notifications" class="icon" title="notifications" /></a>
 </aside>
 <header class="site-header px-3 d-flex flex-row justify-content-between align-items-center position-fixed w-100 mt-2">
   <div class="d-flex align-items-center">
@@ -64,9 +64,14 @@
     <input type="text" class="rounded-end-pill w-100 border-none bg-transparent" />
   </div>
   <div class="w-15 d-flex justify-content-between align-items-center">
-    <a href="#"><img src="{% static 'users/images/developer.png' %}" alt="developer" class="icon" /></a>
-    <a href="#"><img src="{% static 'users/images/help.png' %}" alt="help" class="icon" /></a>
-    <a href="#"><img src="{% static 'users/images/notification.png' %}" alt="notification" class="icon" /></a>
-    <a href="#" class="shadow-sm bg-body-tertiary border border-success rounded-pill overflow-hidden"><img src="{{ request.user.profile_picture.url }}" alt="profile" class="profile" /></a>
+    <a href="#"><img src="{% static 'users/images/developer.png' %}" alt="developer" class="icon" title="API" /></a>
+    <a href="#"><img src="{% static 'users/images/help.png' %}" alt="help" class="icon" title="help" /></a>
+    <div href="#">
+      <img src="{% static 'users/images/notification.png' %}" alt="notification" class="icon" title="notification" />
+      <span class="position-relative">
+        <div class="position-absolute notification-count rounded-circle bg-danger text-white d-flex justify-content-center align-items-center"></div> <!-- unread notification count -->
+      </span>
+    </div>
+    <a href="#" class="shadow-sm bg-body-tertiary border border-success rounded-pill overflow-hidden"><img src="{{ request.user.profile_picture.url }}" alt="profile" class="profile" title="profile" /></a>
   </div>
 </header>
